[package]
name = "axumite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
governor = "0.10.1"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "compression-full"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
